Do not make snapshot ro prior to deletion
This was only needed in order to be able to delete snapshots as a
regular user. Since we no longer do that and require snap to be run as
root, and root can delete ro snapshots just fine, this piece of code is
no longer needed.

--- a/config.example.json
+++ b/config.example.json
@@ -48,7 +48,7 @@
           "Size": 60
         }
       ],
-      "Storage": "/backup/home"
+      "Storage": "/mnt/backup/snap/home"
     }
   }
 }
